# Copyright 2020 MozoLM Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Language modeling package.

package(default_visibility = ["//mozolm:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "language_model",
    srcs = ["language_model.cc"],
    hdrs = ["language_model.h"],
    deps = [
        ":lm_scores_cc_proto",
        "//mozolm:utf8_util",
        "//mozolm/stubs:integral_types",
        "//mozolm/stubs:logging",
    ],
)

proto_library(
    name = "lm_scores_proto",
    srcs = ["lm_scores.proto"],
)

cc_proto_library(
    name = "lm_scores_cc_proto",
    deps = [":lm_scores_proto"],
)
