# Copyright 2021 MozoLM Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Miscellaneous utility packages.

package(default_visibility = ["//mozolm:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "ngram_fst_relabel-lib",
    srcs = ["ngram_fst_relabel.cc"],
    hdrs = ["ngram_fst_relabel.h"],
    deps = [
        "//mozolm/stubs:integral_types",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_nisaba//nisaba/port:status_macros",
        "@com_google_nisaba//nisaba/port:utf8_util",
        "@com_google_protobuf//:protobuf",
        "@org_openfst//:fst",
        "@org_openfst//:symbol-table",
    ],
)

cc_test(
    name = "ngram_fst_relabel_test",
    srcs = ["ngram_fst_relabel_test.cc"],
    deps = [
        ":ngram_fst_relabel-lib",
        "@com_github_protobuf_matchers//protobuf-matchers",
        "@com_google_googletest//:gtest_main",
        "@com_google_nisaba//nisaba/port:status-matchers",
        "@org_openfst//:fst",
        "@org_openfst//:fstscript_compile",
        "@org_openfst//:symbol-table",
    ],
)

cc_binary(
    name = "ngram_fst_relabel",
    srcs = ["ngram_fst_relabel_main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":ngram_fst_relabel-lib",
        "//mozolm/stubs:integral_types",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_nisaba//nisaba/port:status_macros",
        "@com_google_protobuf//:protobuf",
        "@org_openfst//:fst",
    ],
)
