# Copyright 2023 MozoLM Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Test data for the models.

package(default_visibility = ["//mozolm:__subpackages__"])

licenses(["notice"])

filegroup(
    name = "ngram_fst_data",
    srcs = [
        "gutenberg_en_char_ngram.tsv",
        "gutenberg_en_char_ngram_o2_kn.fst",
        "gutenberg_en_char_ngram_o4_wb.fst",
    ],
)

filegroup(
    name = "ppm_as_fst_data",
    srcs = [
        "gutenberg_praise_of_folly.txt",
    ],
)

filegroup(
    name = "simple_bigram_data",
    srcs = [
        "en_wiki_1Mline_char_bigram.matrix.txt",
        "en_wiki_1Mline_char_bigram.rows.txt",
    ],
)
