# Copyright 2022 MozoLM Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# MozoLM Java packages.

package(default_visibility = ["//mozolm:__subpackages__"])

licenses(["notice"])

java_binary(
    name = "VocabOnlyModelClientExample",
    srcs = ["VocabOnlyModelClientExample.java"],
    runtime_deps = ["@com_github_grpc_grpc_java//netty"],
    deps = [
        "//mozolm/grpc:service_java_grpc_proto",
        "//mozolm/grpc:service_java_proto",
        "//mozolm/models:lm_scores_java_proto",
        "@com_github_grpc_grpc_java//core",
    ],
)

java_binary(
    name = "SimpleClientExample",
    srcs = ["SimpleClientExample.java"],
    runtime_deps = ["@com_github_grpc_grpc_java//netty"],
    deps = [
        "//mozolm/grpc:service_java_grpc_proto",
        "//mozolm/grpc:service_java_proto",
        "//mozolm/models:lm_scores_java_proto",
        "@com_github_grpc_grpc_java//core",
    ],
)
